fixed some bugs with the details popup. It doesn't collapse when mouseout anymore, but it is stable and changes kanji and its info, with no issues, when the user hovers over a new kanji.

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@
 	transition: 0.3s;
 	/* cursor: pointer; */
 	overflow: hidden;
+	box-shadow: 0px 0px 5px 1px black;
 }
 
 .wkhighlighter_focusPopup {
@@ -51,7 +52,6 @@
 	padding: 10px 0;
     position: fixed;
     background-color: #4d70d1;
-    width: 250px;
 	border-bottom: 3px solid white;
 	transition: 0.5s;
 }
